try to fix images being too big

--- a/themes/monochrome/assets/scss/base.scss
+++ b/themes/monochrome/assets/scss/base.scss
@@ -59,7 +59,7 @@ figure {
 }
 
 img {
-  max-width: 75%;
+  max-width: 60%;
   border-radius: 3px;
 }
 
